fix(styling): add custom scrollbar where they're not applied

--- a/src/app/components/tree/tree.component.scss
+++ b/src/app/components/tree/tree.component.scss
@@ -1,3 +1,5 @@
+@import '~sass/mixins';
+
 ul {
   list-style: none;
   padding-left: 0;
@@ -70,7 +72,9 @@ ul > li.active > .wrapper, ul ul > li.active {
 }
 
 .top-list {
-  overflow-y: scroll;
+  overflow-y: auto;
+
+  @include customScroll;
 }
 
 nb-icon.status-basic {
