--- a/src/app/pages/produtos/meus-produtos/meus-produtos.component.scss
+++ b/src/app/pages/produtos/meus-produtos/meus-produtos.component.scss
@@ -1,3 +1,5 @@
+@import '~sass/mixins';
+
 .wrapper {
   display: flex;
   min-height: 100%;
@@ -36,8 +38,10 @@ ul li.menu-item {
 }
 
 .product-list {
-  overflow-y: scroll;
+  overflow-y: auto;
   padding-bottom: 4rem;
+
+  @include customScroll;
 }
 
 .product-list ::ng-deep nb-list-item:hover {
